--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "@openai/codex-sdk": "^0.57.0",
+    "html-to-image": "^1.11.13",
+    "konva": "^10.0.8",
+    "lucide-react": "^0.553.0",
     "next": "16.0.1",
     "openai": "^6.7.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-konva": "^19.2.0",
     "sharp": "^0.34.4"
   },
   "devDependencies": {
